--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,10 +1,21 @@
 repos:
-  - repo: https://github.com/jeffa5/typstfmt
-    rev: ade0a3553464f7833716d4242f97cfb12e212429
-    hooks:
-      - id: typstfmt
+#  - repo: https://github.com/jeffa5/typstfmt
+#    rev: ade0a3553464f7833716d4242f97cfb12e212429
+#    hooks:
+#      - id: typstfmt
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v5.0.0  # Use the ref you want to point at
     hooks:
       - id: trailing-whitespace
       - id: check-added-large-files
+  - repo: local
+    hooks:
+      - id: typstyle
+        name: typstyle
+        description: Format files with typstyle
+        entry: typstyle
+        language: rust
+        types: [file]
+        additional_dependencies: ["cli:typstyle:0.13.9"]
+        files: \.typ$
+        args: ["-i", "--wrap-text", "--line-width=80"]
